--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,4 +1,13 @@
 /*Home.css*/
 .home {
-
+  background: #28409d; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, #28409d, #dc579a); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(left, #28409d, #dc579a); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(left, #28409d, #dc579a); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(left, #28409d, #dc579a); /* Standard syntax */
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  text-align: center;
+  color: white;
 }
