--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,10 +1,6 @@
 /*Home.css*/
 .home {
-  background: #28409d; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, #28409d, #dc579a); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(left, #28409d, #dc579a); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(left, #28409d, #dc579a); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(left, #28409d, #dc579a); /* Standard syntax */
+  background: linear-gradient(to bottom, #92d1c4 0%, #c9dcbc 100%); /* For browsers that do not support gradients */
   width: 100%;
   box-sizing: border-box;
   margin: 0;
