--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,7 +1,7 @@
 /*HeaderBar.css*/
 
 .headerbar {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .headerbarItem {
