--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,3 +7,13 @@
 .headerbarItem {
   margin: 0 10px;
 }
+
+.splashContent {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.splashHeader {
+  margin-bottom: 10px;
+}
