add links to headerbar, add media queries

--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,5 +1,7 @@
 /*HeaderBar.css*/
 
+/* Mobile first queries */
+
 .headerbar {
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
@@ -7,3 +9,18 @@
 .headerbarItem {
   margin: 0 10px;
 }
+
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet */
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
