remove marign-top, change background color to white

--- a/src/components/LoginBar/LoginBar.css
+++ b/src/components/LoginBar/LoginBar.css
@@ -12,10 +12,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #eee;
+  background-color: #fff;
   border-radius: 7px;
   text-align: center;
-  margin-top: 30px;
 }
 
 .formContainer {
