--- a/src/components/LoginBar/LoginBar.css
+++ b/src/components/LoginBar/LoginBar.css
@@ -12,9 +12,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   background-color: #fff;
   border-radius: 7px;
   text-align: center;
+  padding-top: 10px;
 }
 
 .formContainer {
