--- a/src/components/LoginBar/LoginBar.css
+++ b/src/components/LoginBar/LoginBar.css
@@ -30,6 +30,8 @@
 }
 
 .formInput {
+  outline: none;
+  border: 1px solid #444;
   border-radius: 7px;
   font-size: 20px;
   padding: 5px;
@@ -38,6 +40,9 @@
 }
 
 .formButton {
+  border: 1px solid #444;
+  border-radius: 7px;
+  background-color: #fff;
   width: 30%;
   height: 40px;
   margin: 10px 0 20px 0;
@@ -48,7 +53,10 @@
 @media (min-width: 400px) {
   .loginBar {
     width: 50%;
-    height: 50%;
+    height: 60%;
+  }
+  .loginTitle {
+    padding-bottom: 40px;
   }
 }
 
