--- a/src/components/LoginBar/LoginBar.css
+++ b/src/components/LoginBar/LoginBar.css
@@ -14,9 +14,10 @@
   align-items: center;
 
   background-color: #fff;
-  border-radius: 7px;
+  border-radius: 3px;
   text-align: center;
   padding-top: 10px;
+  box-shadow: 0 0 30px rgba(10, 98, 63, 0.5);
 }
 
 .formContainer {
@@ -31,8 +32,8 @@
 
 .formInput {
   outline: none;
-  border: 1px solid #444;
-  border-radius: 7px;
+  border: 1px solid #aaa;
+  border-radius: 3px;
   font-size: 20px;
   padding: 5px;
   margin: 5px;
@@ -41,7 +42,7 @@
 
 .formButton {
   border: 1px solid #444;
-  border-radius: 7px;
+  border-radius: 3px;
   background-color: #fff;
   width: 30%;
   height: 40px;
@@ -57,6 +58,7 @@
   }
   .loginTitle {
     padding-bottom: 40px;
+    font-size: 50px;
   }
 }
 
