--- a/src/components/SimpleMeter/SimpleMeter.css
+++ b/src/components/SimpleMeter/SimpleMeter.css
@@ -1,1 +1,25 @@
 /*SimpleMeter.css*/
+
+.meter { 
+  height: 20px;  /* Can be anything */
+  position: relative;
+  background: #555;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  padding: 10px;
+  box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+}
+
+.progress {
+  width: 30%;
+  display: block;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(43,194,83);
+  position: relative;
+  overflow: hidden;
+}
