--- a/src/components/SimpleMeter/SimpleMeter.css
+++ b/src/components/SimpleMeter/SimpleMeter.css
@@ -1,13 +1,14 @@
 /*SimpleMeter.css*/
 
 .meter { 
-  height: 20px;  /* Can be anything */
+  height: 10px;  /* Can be anything */
   position: relative;
   background: #555;
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
   border-radius: 25px;
   padding: 10px;
+  margin-bottom: 5px;
   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
 }
 
