--- a/main.css
+++ b/main.css
@@ -60,16 +60,27 @@ h1 {
 }
 
 h2 {
-  font-weight: 300;
+  font-weight: 500;
   font-size: 24px;
 }
 
+p {
+  font-weight: 300;
+}
+
+/* Container: styles divs to give child elements space on the left and right sides  */
 .container {
   width: 85%;
   min-width: 200px;
   margin: 0 auto;
 }
 
+.container-2 {
+  width: 85%;
+  margin: 0 auto;
+}
+
+/* Button styling */
 .btn {
   border: none;
   border-radius: 7px;
@@ -86,8 +97,102 @@ h2 {
   outline: none;
 }
 
+/* Flexbox */
 .flex-row-sb {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+/** Font Styles **/
+/* Font weights */
+.font-100 {
+  font-weight: 100;
+}
+
+.font-200 {
+  font-weight: 200;
+}
+
+.font-300 {
+  font-weight: 300;
+}
+
+.font-400 {
+  font-weight: 400;
+}
+
+.font-500 {
+  font-weight: 500;
+}
+
+.font-600 {
+  font-weight: 600;
+}
+
+.font-700 {
+  font-weight: 700;
+}
+
+.font-800 {
+  font-weight: 800;
+}
+
+/* Display */
+
+.inline {
+  display: inline;
+}
+
+.block {
+  display: block;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+/* Color */
+
+.font-white {
+  color: #fff;
+}
+
+/* Font Size */
+
+.font-size-14 {
+  font-size: 14px;
+}
+
+.font-size-18 {
+  font-size: 18px;
+}
+
+.font-size-24 {
+  font-size: 24px;
+}
+
+.font-size-28 {
+  font-size: 28px;
+}
+
+.font-size-32 {
+  font-size: 32px;
+}
+
+.font-size-36 {
+  font-size: 36px;
+}
+
+.font-size-40 {
+  font-size: 40px;
+}
+
+.font-size-44 {
+  font-size: 44px;
 }
