--- a/src/components/EditStorageModal/EditStorageModal.css
+++ b/src/components/EditStorageModal/EditStorageModal.css
@@ -6,3 +6,14 @@
   background-color: white;
   border-radius: 3px;
 }
+
+.storageModalWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 120px;
+  text-align: center;
+  border-radius: 3px;
+  background-color: white;
+}
